--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-messaging:20.2.0'
-
+    implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
